--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -15,15 +16,10 @@
 </head>
 
 <body>
-    <script src="js/three.js"></script>
-    <script>
-        var scene = new THREE.Scene();
-        var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    <script
+        src="https://montana-media-arts.github.io/441-WebTech-Spring2021-Examples/Week%2013/library/three.min.js"></script>
+    <script src="3js.js"></script>
 
-        var renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
-    </script>
 </body>
 
 </html>
